dto and entity clean up